--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,8 +12,6 @@
     <string name="next">Next</string>
     <string name="previous">Previous</string>
 
-    <string name="hello_first_fragment">Hello first fragment</string>
-    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
     <string name="email">email</string>
     <string name="password">password</string>
     <string name="login">login</string>
@@ -22,4 +20,15 @@
     <string name="AddNews">Añadir Noticia</string>
     <string name="salir">Salir</string>
     <string name="ok">ok</string>
+    <string name="ingles">Ingles</string>
+    <string name="vota_dislike">Vota Dislike</string>
+    <string name="vota_like">Vota Like</string>
+    <string name="borrar">Borrar</string>
+    <string name="espa_ol">Español</string>
+    <string name="cancelar">Cancelar</string>
+    <string name="cambiar">Cambiar</string>
+    <string name="cambiar_idioma">Cambiar Idioma</string>
+    <string name="selecciona_el_idioma_de_las_noticias">Selecciona el idioma de las noticias</string>
+    <string name="hacer_foto">Hacer foto</string>
+    <string name="titulo">Titulo</string>
 </resources>
